# JABS-behavior-classifier

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE.md  README.md  README.rst  app.py  classify.py  environment.yml  environment_jabs.yml  generate_features.py  get_frequency_feature_profile.txt  hyperparameters.json  initialize_project.py  jabs.bat  jax-aba.bat  launch_jabs.bat  main_window.py  pyproject.toml  requirements-old.txt  requirements.txt  rotta.bat  ruff.toml  setup_windows.bat  signal_processing_profile.txt  stats.py  zensical.toml
.github/workflows/: _build-docker-action.yml  _format-lint-action.yml  _run-tests-action.yml  build-pose-image.yml  docs.yml  pull-request.yml  release.yml
containers/docker/: Dockerfile.pose
dev/: behavior_bout_keypoint_analysis.py  generate_keypoint_legend.py  preview_multiclass_timeline.py  sample_missing_keypoint_frames.py  sync-versions.sh
doc/user_guide/: user_guide.md
docs/: DEVELOPMENT.md  DOCS_README.md  index.md  notes.txt  user-guide.md  work_history.md
docs/api-reference/: index.md
docs/development/: contributing.md  development.md  jabs-nwb-format.md
docs/features/: features.md
docs/get-started/: installation.md
docs/source/: 10 minutes to JABS.rst  Classifier_training.rst  JABS_intro.ipynb  JABS_user_guide.rst  Lesson-2.rst  Lesson-3.rst  ML-Course-2022-JABS-RTD.rst  advancedjabs.rst  conf.py  index.rst  requirements.txt  stuff.py  usage.rst  vidtutorial.rst
docs/tutorial/: .gitignore  README.md  README.rst
docs/user-guide/: advanced-usage.md  behavior-search.md  cli-tools.md  file-formats.md  gui.md  keyboard-shortcuts.md  labeling.md  nwb-export.md  overview.md  project-setup.md
docs/user_guide/: user_guide.md  work_history.md
pose_estimation/: __init__.py  pose_estimation_v3.py
src/: __init__.py
src/classifier/: __init__.py  classifier.py  serializer.py  skl_classifier.py
src/cli/: __init__.py  progress_bar.py
src/feature_extraction/: __init__.py  angle_index.py  feature_base_class.py  feature_group.py  feature_group_base_class.py  feature_set.py  features.py
src/jabs/: __init__.py  __main__.py  constants.py
src/labeler/: __init__.py  export_training.py  project.py  test.py  track_labels.py  video_labels.py
src/pose_estimation/: __init__.py  pose_est.py  pose_est_v2.py  pose_est_v3.py  pose_est_v4.py  pose_est_v5.py  pose_est_v6.py  pose_estimation_v3.py
src/project/: __init__.py  export_training.py  project.py  read_training.py  track_labels.py  units.py
src/tests/: test_pose_file.py  test_project.py  test_track_labels.py  test_video_labels.py
src/ui/: __init__.py  about_dialog.py  archive_behavior_dialog.py  central_widget.py  classification_thread.py  colors.py  disclaimer_dialog.py  frame_labels_widget.py  global_inference_widget.py  identity_combo_box.py  k_fold_slider_widget.py  label_count_widget.py  license_dialog.py  main_control_widget.py  main_window.py  manual_label_widget.py  player_widget.py  playlist_widget.py  prediction_vis_widget.py  timeline_label_widget.py  training_thread.py  user_guide_viewer_widget.py  utilities.py  video_list_widget.py
src/utils/: __init__.py  sampleposeintervals.py  utilities.py
src/version/: __init__.py
src/video_stream/: __init__.py  frame_annotation.py  utilities.py  video_stream.py
tests/: __init__.py  profile_signal_processing.ipynb  test_behavior_search.py  test_code_snippets.ipynb  test_pose_ancillary.py  test_pose_file.py  test_project.py  test_track_labels.py  test_video_labels.py  timeline_annotations.py
tests/classifier/: test_classifier.py  test_cross_validation.py  test_logo_exclusion.py  test_mlflow_logging.py  test_multi_class_classifier.py  test_training_report.py
tests/data/: identity_with_no_data_pose_est_v3.h5  readme.txt  sample_pose_est_v2.h5  sample_pose_est_v3.h5  sample_pose_est_v5.h5  sidecar_format_v1.vjepa.h5
tests/feature_extraction/: test_feature_base_class.py  test_identity_features.py  test_identity_features_hdf5.py
tests/feature_modules/: __init__.py  base.py  test_corner_features.py  test_food_hopper.py  test_lixit_distance.py
tests/feature_tests/: moment_protyping.py  seg_test_utils.py  signal_protyping.py  temporal.py  test_hu_moments.py  test_moments.py  test_temporal_features.py  test_temporal_features.py.disabled
tests/io/: test_io_prediction.py  test_pose_v2_roundtrip.py
tests/pose_estimation/: test_pose_file.py
tests/project/: __init__.py  test_cv_grouping.py  test_export_training_multiclass.py  test_initialize_project.py  test_parallel_workers.py  test_pose_attribute_cache.py  test_prediction_manager.py  test_project.py  test_project_cache_format.py  test_project_merge.py  test_project_path.py  test_project_paths.py  test_project_util.py  test_remap_labels.py  test_settings_manager.py  (+5 more)
ui/: __init__.py  main_window.py  player_widget.py
video_stream/: __init__.py  frame_annotation.py  video_stream.py
vm/: README.md  behavior-classifier-vm-gui.def  behavior-classifier-vm.def  behavior-classify-batch.sh  generate-features.sh  gui.def  headless.def
(+415 files in other folders)
