[tool.poetry]
name = "jabs-behavior-classifier"
version = "0.21.1"
license = "Proprietary"
repository = "https://github.com/KumarLabJax/JABS-behavior-classifier"
description = ""
authors = ["Glen Beane", "Brian Geuther"]
readme = "README.md"
packages = [
    { include = "jabs", from = "src" },
]

[tool.poetry.scripts]
jabs = "jabs.scripts:main"
jabs-classify = "jabs.scripts.classify:main"
jabs-init = "jabs.scripts.initialize_project:main"
jabs-features = "jabs.scripts.generate_features:main"
jabs-stats = "jabs.scripts.stats:main"
jabs-convert-parquet = "jabs.scripts.convert_parquet:main"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
h5py = ">=3.10.0"
markdown2 = "^2.5.1"
numpy = "^2.0.0"
opencv-python-headless = "^4.8.1.78"
pandas = "^2.2.2"
pyside6 = ">=6.8,<6.10"
scikit-learn = ">=1.5.0,<2.0.0"
shapely = "^2.0.1"
tabulate = "^0.9.0"
toml = "^0.10.2"
xgboost = "1.7.6"
pyarrow = "^20.0.0"
argparse-formatter = "^1.4"


[tool.poetry.group.dev.dependencies]
matplotlib = "^3.9.3"
pytest = "^8.3.4"
ruff = "^0.11.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
