[project]
name = "jabs-behavior-classifier"
version = "0.35.0"
description = ""
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = { text = "Proprietary" }

authors = [
  { name = "Glen Beane" },
  { name = "Brian Geuther" },
  { name = "Keith Sheppard" },
]

dependencies = [
  "h5py>=3.10.0,<4.0.0",
  "markdown2>=2.5.1,<3.0.0",
  "numpy>=2.0.0,<3.0.0",
  "opencv-python-headless>=4.8.1.78,<5.0.0",
  "pandas>=2.2.2,<3.0.0",
  "pyside6>=6.8.0,!=6.9.0",
  "scikit-learn>=1.5.0,<2.0.0",
  "shapely>=2.0.1,<3.0.0",
  "tabulate>=0.9.0,<1.0.0",
  "toml>=0.10.2,<0.11.0",
  "xgboost>=2.0.0,<3.0.0",
  "pyarrow>=20.0.0,<21.0.0",
  "rich>=14.0.0,<15.0.0",
  "rich-argparse>=1.7.1,<2.0.0",
  "intervaltree>=3.1.0,<4.0.0",
  "qt-material-icons>=0.2.0,<0.3.0",
  "jsonschema>=4.25.1,<5.0.0",
]

[dependency-groups]
dev = [
  "matplotlib>=3.9.3,<4.0.0",
  "pytest>=8.3.4,<9.0.0",
  "ruff>=0.11.5,<0.12.0",
  "pre-commit>=4.2.0,<5.0.0",
]

[project.urls]
Repository = "https://github.com/KumarLabJax/JABS-behavior-classifier"
Issues = "https://github.com/KumarLabJax/JABS-behavior-classifier/issues"

[project.scripts]
jabs = "jabs.scripts.gui_entrypoint:main"
"jabs-classify" = "jabs.scripts.classify:main"
"jabs-init" = "jabs.scripts.initialize_project:main"
"jabs-features" = "jabs.scripts.generate_features:main"
"jabs-stats" = "jabs.scripts.stats:main"
"jabs-convert-parquet" = "jabs.scripts.convert_parquet:main"
"jabs-project-merge" = "jabs.scripts.merge_projects:main"

# Poetry-specific config kept for src/ layout and Poetry's own dev group
[tool.poetry]
packages = [
  { include = "jabs", from = "src" },
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# TODO: Migrate to uv_build
#requires = ["uv_build>=0.7.19,<0.8.0"]
#build-backend = "uv_build"
#
#[tool.uv.build-backend]
## Your package lives at: src/jabs/__init__.py
#module-name = "jabs"
